--- a/styles.css
+++ b/styles.css
@@ -534,7 +534,7 @@ h2{
     font-style: italic;
 }
 
-/* .giveawayButton{                                                             !!! Activate for Giveaway !!!
+/* .giveawayButton{                                                         
     margin: 25px 0px 25px 10px;
     border: none;
     font-size: 20px;
@@ -721,7 +721,7 @@ h2{
     .faqSection{
         max-width: 80%;
     }
-    
+
 
     /* Contact Section (1000px responsive) */
 
@@ -797,7 +797,7 @@ h2{
 
     /* Contact Section (640px responsive) */
 
-    
+
 
     .contactImage{
         width: 50px;
