--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body{
   font-family: 'Roboto', sans-serif;
   scroll-behavior: smooth;
   background: #f1f2f6;
+  overflow-x: hidden;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
